# kstd-reflect

./: CMakeLists.txt  README.md
.github/workflows/: develop.yml  master.yml  workflow.yml  workflows.yml
include/kstd/reflect/: element_type.hpp  field_info.hpp  function_info.hpp  member_function_info.hpp  reflection.hpp  reflection_fwd.hpp  rtti.hpp  rtti_ref.hpp  type_info.hpp  variable_info.hpp
test/: foo_types.cpp  foo_types.hpp  main.cpp  test_expressions.cpp  test_fields.cpp  test_functions.cpp  test_rtti_refs.cpp  test_types.cpp  test_variables.cpp
